@@ -7,6 +7,8 @@
 	  additional unification of target code generation
 	* support/cpp/configure.in, support/cpp/configure,
 	  support/cpp/system.h: fixed sdcc configure include paths
+	* src/SDCCgen.c: don't emit leading whitespaces in inline asm;
+	  fixed bug #3515390 - asm with leading whitespace passed to backends
 
 2012-04-05 Philipp Klaus Krause <pkk AT spth.de>
 
